# scaff

./: CONTRIBUTING.md  Cargo.toml  DEFAULT_SCAFF_FEATURE.md  INSIGHT.md  PLAN.md  README.md
.cargo/: config.toml
complex_output/: Cargo.toml
complex_output/src/components/ui/: Button.rs
complex_output/src/services/auth/: mod.rs
complex_output/src/utils/helpers/: string_utils.rs
complex_output/tests/integration/: api_tests.rs
docs/: README.md  SCAFF_FORMAT.md  TEMPLATES.md
scaffs/: complex-structure.json  config.json  scaff-cli-pattern.json  test_pattern.json
src/: cli.rs  generator.rs  main.rs  pattern.rs  scanner.rs  validator.rs
templates/: js_file.hbs  rust_file.hbs
tests/: integration_tests.rs
