[package]
name = "scaff"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
handlebars = "6.3.2"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.1"
tree-sitter-java = "0.23.1"
tree-sitter-go = "0.23.1"
tree-sitter-php = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-typescript = "0.23.1"
tree-sitter-json = "0.24.1"
tree-sitter-html = "0.23.1"
tree-sitter-css = "0.23.1"
log = "0.4"
env_logger = "0.11.8"
serde_json = "1.0.140"
chrono = "0.4.41"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
